Fix title box text not aligning with rest of options

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,7 @@ label { margin: 3px; }
 }
 
 .title-box {
+    margin-left: 2px;
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
